# tsimpute

./: .gitignore  LICENSE  Makefile  README.md  create_dirs.sh  environment.yml  pyproject.toml
bash/: create_dirs.sh  download_gvf_from_ensembl.sh  make_cmds_ceu_ceu_p10.sh  make_cmds_ceu_ceu_p90.sh  make_cmds_ceu_chb_p10.sh  make_cmds_ceu_chb_p90.sh  make_cmds_ceu_yri_p10.sh  make_cmds_ceu_yri_p90.sh  make_cmds_chb_ceu_p10.sh  make_cmds_chb_ceu_p90.sh  make_cmds_yri_ceu_p10.sh  make_cmds_yri_ceu_p90.sh  perform_imputation.sh  prepare_ancestral_states.sh  run_imputation.sh  run_imputation_tuning_leaves_kept.sh  run_imputation_tuning_leaves_removed.sh  run_preprocessing.sh  run_sample_matching.sh  run_simulation_analysis.sh  run_tsinfer.sh  run_tuning_analysis.sh
demes/: gutenkunst_2009.yaml
figures/: make_plot_imputation.R
hapmap/: genetic_map_GRCh37_chr20_reduced_plink_v2.txt
modules/: mask_genotype.py
notebooks/: TestImpute  TestImpute.ipynb  analyze_allele_frequencies-ooa-unequal.ipynb  analyze_allele_frequencies-panmictic.ipynb  bokeh-example.ipynb  check_refactored_matrix_computations.ipynb  create_simulated_data.ipynb  demo_a_la_beagle.ipynb  demo_add_individuals_to_ts.ipynb  demo_beagle_impute_ancestors.ipynb  examine_low_iqs.ipynb  example_add_individual_to_ts.ipynb  genotype_imputation.ipynb  genotype_imputation_ooa_equal.ipynb  genotype_imputation_ooa_unequal.ipynb  genotype_imputation_ooa_unequal_demes.ipynb  genotype_imputation_panmictic.ipynb  impute_using_ts_only.ipynb  inspect_ts.ipynb  inspect_ts_a-4s-4.ipynb  inspect_ts_a-7s-7.ipynb  (+21 more)
(+141 files in other folders)
