[project]
name = "tsimpute"
description = "Genome-wide genotype imputation using tree sequences"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Shing Hei Zhan", email = "shing.zhan@ndph.ox.ac.uk"},
]
requires-python = ">=3.9"
dependencies = [
  "click",
  "tskit>=0.5.3",
  "msprime==1.3.3",
  "zarr<2.18",
  "numpy<=1.26.4",
  "numba==0.60.0",
]
dynamic = ["version"]

[project.scripts]
bacts = "tsimpute.cli:cli"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-coverage",
]

[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tsimpute"]

[tool.setuptools_scm]
write_to = "tsimpute/_version.py"

